quinto commit do CSS

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    padding: 0;
    box-sizing: border-box;
    font-family: "Overpass", sans-serif;
-   -webkit-font-smoothing: antialiased;
+   -webkit-font-smoothing: antialia
  }
 
  :root {
@@ -32,6 +32,21 @@
     border-radius: 30px;
  }
 
+ .estrela {
+  background-color: var(--dark-blue);
+  width: 48px;
+  height: 48px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50%;
+
+  margin-bottom: 30px;
+
+}
+
  .card h1 {
      color: var(--white);
      font-size: 28px;
@@ -42,19 +57,22 @@
     color: var(--light-grey);
     font-size: 15px;
     line-height: 24px;
+    margin-bottom: 24px;
  }
 
- .estrela {
-    background-color: var(--dark-blue);
-    width: 48px;
-    height: 48px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+ .botoes button {
+    width: 51px;
+    height: 51px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
     border-radius: 50%;
+    border: none;
+    color: var(--medium-grey);
+    background-color: var(--dark-blue);
 
-    margin-bottom: 30px;
+ }
 
+ .botoes button:hover {
+  
  }
