--- a/style.css
+++ b/style.css
@@ -60,7 +60,14 @@
     margin-bottom: 24px;
  }
 
+ .botoes {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 32px;
+ }
+
  .botoes button {
+
     width: 51px;
     height: 51px;
     font-size: 16px;
@@ -71,8 +78,40 @@
     color: var(--medium-grey);
     background-color: var(--dark-blue);
 
+    transition: all ease-in-out 0.3s;
+
  }
 
  .botoes button:hover {
-  
+    color: var(--white);
+    background-color: var(--orange);
+    cursor: pointer;
+    
  }
+ .botoes button:focus {
+     color: var(--white);
+     background-color: var(--light-grey);
+ }
+
+.card > button {
+    width: 100%;
+    padding: 13px;
+    background-color: var(--orange);
+    border: none;
+    border: radius 22px;
+
+    font-size: 15px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: var(--white);
+
+    transition: all ease-in-out 0.3s;
+
+}
+
+.card > button:hover {
+   color: var(--orange);
+   background-color: var(--white);
+   cursor: pointer;
+}
