--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@
  }
 
  .botoes button {
-
     width: 51px;
     height: 51px;
     font-size: 16px;
@@ -93,24 +92,27 @@
      background-color: var(--light-grey);
  }
 
-.card > button {
+.card > a {
+    display: block;
     width: 100%;
     padding: 13px;
     background-color: var(--orange);
     border: none;
-    border: radius 22px;
+    border-radius: 22px;
 
     font-size: 15px;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
     color: var(--white);
+    text-align: center;
+    text-decoration: none;
 
     transition: all ease-in-out 0.3s;
 
 }
 
-.card > button:hover {
+.card > a:hover {
    color: var(--orange);
    background-color: var(--white);
    cursor: pointer;
